[workspace]
resolver = "2"

members = ["wordle","game-session"]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
wordle-io.path = "wordle/io"
game-session-io.path = "game-session/io"

gstd = "1.7.0"
gmeta = "1.7.0"
spin = "0.9"
gear-wasm-builder = "1.7.0"
gtest = "1.7.0"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
